--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* hover:!bg-white hover:!outline hover:!outline-2 hover:!outline-blue-500 hover:!text-black */
+/* hover when background  is black */
+/* use apply force it is important */
+@layer components {
+        /* hover when background is red */
+        .hover-bg-red {
+            @apply hover:bg-white hover:outline hover:outline-red-500 hover:outline-2 hover:text-red-500 !important; 
+        }
+        /* hover when background is white */
+        .hover-bg-white {
+            @apply hover:!bg-stone-200; 
+        }
+    
+        /* hover when background is gray */
+        .hover-bg-gray {
+            @apply hover:bg-white hover:text-emerald-950; 
+        }
+
+        .flex-center{
+            @apply flex justify-center items-center
+        }
+
+        .remove-border{
+            @apply border-none shadow-none !important
+        }
+}
