--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+    html{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    body{
+        width: 100%;
+    }
+}
+
 /* hover:!bg-white hover:!outline hover:!outline-2 hover:!outline-blue-500 hover:!text-black */
 /* hover when background  is black */
 /* use apply force it is important */
@@ -14,17 +25,17 @@
         .hover-bg-white {
             @apply hover:!bg-stone-200; 
         }
-    
         /* hover when background is gray */
         .hover-bg-gray {
             @apply hover:bg-white hover:text-emerald-950; 
         }
-
         .flex-center{
             @apply flex justify-center items-center
         }
-
         .remove-border{
             @apply border-none shadow-none !important
         }
+        /* .primary-font-color{
+            color:#454545 !important
+        } */
 }
