--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,12 @@
     body{
         width: 100%;
     }
+    h1{
+        @apply text-6xl
+    }
+    h3{
+        @apply text-2xl
+    }
 }
 
 /* hover:!bg-white hover:!outline hover:!outline-2 hover:!outline-blue-500 hover:!text-black */
