--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,46 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
-    html{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    body{
-        width: 100%;
-    }
-    h1{
-        @apply text-6xl
-    }
-    h3{
-        @apply text-2xl
-    }
+@layer base {
+  html {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    width: 100%;
+  }
+  h1 {
+    @apply text-6xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  h2{
+    @apply text-5xl;
+  }
+  p{
+    color: #454545;
+  }
 }
 
 /* hover:!bg-white hover:!outline hover:!outline-2 hover:!outline-blue-500 hover:!text-black */
 /* hover when background  is black */
 /* use apply force it is important */
 @layer components {
-        /* hover when background is red */
-        .hover-bg-red {
-            @apply hover:bg-white hover:outline hover:outline-red-500 hover:outline-2 hover:text-red-500 !important; 
-        }
-        /* hover when background is white */
-        .hover-bg-white {
-            @apply hover:!bg-stone-200; 
-        }
-        /* hover when background is gray */
-        .hover-bg-gray {
-            @apply hover:bg-white hover:text-emerald-950; 
-        }
-        .flex-center{
-            @apply flex justify-center items-center
-        }
-        .remove-border{
-            @apply border-none shadow-none !important
-        }
-        /* .primary-font-color{
+  /* hover when background is red */
+  .hover-bg-red {
+    @apply hover:bg-white hover:outline hover:outline-red-500 hover:outline-2 hover:text-red-500 !important;
+  }
+  /* hover when background is white */
+  .hover-bg-white {
+    @apply hover:!bg-stone-200;
+  }
+  /* hover when background is gray */
+  .hover-bg-gray {
+    @apply hover:bg-white hover:text-emerald-950;
+  }
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
+  .remove-border {
+    @apply border-none shadow-none !important;
+  }
+  /* .primary-font-color{
             color:#454545 !important
         } */
+  .link-primary {
+    @apply underline hover:underline hover:decoration-[3px] hover:text-inherit;
+  }
 }
